--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,4 +1,12 @@
-<h2>Hello World</h2>
-<p>
-  The time is now: <%= Time.now %>
-</p>
+<header class="navbar navbar-fixed-top navbar-inverse">
+      <div class="container">
+        <h2>Welcome to the school info display</h2>
+        <nav>
+          <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to "Courses",   courses_path %></li>
+            <li><%= link_to "Instructors",   instructors_path %></li>
+            <li><%= link_to "Subjects", subjects_path%></li>
+          </ul>
+        </nav>
+      </div>
+</header>
