Finish basic functionalities

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,16 +1,60 @@
-<nav class="navbar mb-2 navbar-inverse">
+<% unless true%>
+<nav class="navbar mb-2">
   <div class="container-fluid">
     
-    <ul class="nav navbar-nav navbar-right">
-      <% if logged_in? %>
+    <div class="navbar-header">
+      <%= link_to "Root", root_path %>
+    </div>
+    <% if logged_in? %>
+     
+        <ul class="nav navbar-nav navbar-right">
           <li><%= link_to "Courses",   courses_path %></li>
           <li><%= link_to "Instructors",   instructors_path %></li>
           <li><%= link_to "Subjects", subjects_path%></li>
-        <li><%= link_to "Log out", logout_path, method: "delete"%></li>
-      <% else %>
-        <li><%= link_to "Sign up", signup_path %></li>
-        <li><%= link_to "Log in", login_path %></li>
-      <% end %>
-    </ul>
+          <li><%= link_to "Search", search_path%></li>
+          <li><%= link_to "Log out", logout_path, method: "delete"%></li>
+          <li><%= link_to "Dashboard", :controller => "users", :action => "show", :id => current_user.id %></li>
+
+        </ul>
+        
+    <% else %>
+        <ul class="nav navbar-nav navbar-right">
+          <li><%= link_to "Sign up", signup_path %></li>
+          <li><%= link_to "Log in", login_path %></li>
+        </ul>
+    <% end %>
+    
   </div>
+</nav>
+<%end%>
+
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <%if logged_in? %>
+    <li class="navbar-brand"><%= link_to "Dashboard", :controller => "users", :action => "show", :id => current_user.id %></li>
+    
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        
+        <li class="nav-item nav-link"><%= link_to "Courses",   courses_path %></li>
+        <li class="nav-item nav-link"><%= link_to "Instructors",   instructors_path %></li>
+        <li class="nav-item nav-link"><%= link_to "Subjects", subjects_path%></li>
+        <li class="nav-item nav-link"><%= link_to "Search", search_path%></li>
+        <li class="nav-item nav-link"><%= link_to "Log out", logout_path, method: "delete"%></li>
+        
+      
+      </ul>
+    </div>
+  <%else%>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item nav-link"><%= link_to "Sign up", signup_path %></li>
+        <li class="nav-item nav-link"><%= link_to "Log in", login_path %></li>
+        
+      
+      </ul>
+    </div>
+  <%end%>
+  
+
+  
 </nav>
