--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,10 +1,11 @@
 
-<div class="text-center home">
+<div class="text-center home new">
   <h2>This is a simple course registration website</h2>
   <br/>
   <p>
     Please signup or login to enroll courses or to view the database.
   <p>
-  <%= link_to "Sign up", signup_path, class: "btn btn-primary" %>
+  
+
 </div>
 
